--- a/src/css/style.css
+++ b/src/css/style.css
@@ -7,6 +7,7 @@ body {
   margin: 0;
   padding: 0;
   font-family: "Fira Sans", sans-serif;
+  position: relative;
 }
 
 html {
@@ -108,6 +109,11 @@ input {
   font-weight: 300;
   font-size: 1rem;
   text-decoration: none;
+  -webkit-transition: all 0.3s;
+  transition: all 0.3s;
+}
+.navbar-list__item a:hover {
+  color: #0085b2;
 }
 .navbar-list__item:last-child {
   margin-right: 0;
@@ -138,6 +144,24 @@ input {
   color: #e7811f;
 }
 
+@media (max-width: 1200px) {
+  .navbar-block {
+    -webkit-box-pack: end;
+        -ms-flex-pack: end;
+            justify-content: flex-end;
+  }
+  .navbar-list {
+    display: none;
+  }
+}
+@media (max-width: 576px) {
+  .navbar__button {
+    padding: 12px 12px;
+  }
+  .navbar-phone {
+    margin-right: 7px;
+  }
+}
 .hero {
   padding-top: 103px;
   background: url("../img/hero/hero-bg.jpg") center center no-repeat;
@@ -234,6 +258,8 @@ input {
   padding: 23px 0;
   background: url("../img/question/question-bg.jpg") left center no-repeat;
   background-size: 40%;
+  -webkit-box-shadow: 5px 5px 11px 4px rgba(0, 0, 0, 0.1);
+          box-shadow: 5px 5px 11px 4px rgba(0, 0, 0, 0.1);
 }
 .question__title {
   text-align: left;
@@ -305,5 +331,301 @@ input {
   }
   .question__button {
     width: 80%;
+  }
+}
+.rate-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.rate-block table {
+  border-top: 5px solid #e7811f;
+  -ms-flex-preferred-size: 45%;
+      flex-basis: 45%;
+}
+.rate-block table thead tr td {
+  color: #0085b2;
+  font-weight: 700;
+  padding: 10px 0;
+}
+.rate-block table tbody tr:nth-child(even) {
+  background-color: #ccf2ff;
+}
+.rate-block table tbody tr td {
+  padding: 10px 0;
+  color: #414042;
+}
+
+@media (max-width: 992px) {
+  .rate-block {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .rate-block table {
+    -ms-flex-preferred-size: 80%;
+        flex-basis: 80%;
+    margin-bottom: 40px;
+  }
+}
+.gallery-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+  -webkit-box-pack: space-;
+      -ms-flex-pack: space-;
+          justify-content: space-;
+  text-align: center;
+}
+.gallery-block__img {
+  -ms-flex-preferred-size: 33%;
+      flex-basis: 33%;
+  margin-bottom: 40px;
+}
+
+@media (max-width: 992px) {
+  .gallery-block {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .gallery-block__img {
+    -ms-flex-preferred-size: 45%;
+        flex-basis: 45%;
+  }
+}
+@media (max-width: 992px) {
+  .gallery-block__img {
+    -ms-flex-preferred-size: 55%;
+        flex-basis: 55%;
+  }
+}
+.location {
+  padding-top: 60px;
+  padding-bottom: 90px;
+  background: url("../img/location/location-bg.png") center center no-repeat;
+  background-size: cover;
+}
+.location__title {
+  text-align: left;
+}
+.location__text {
+  margin-top: 20px;
+  color: #414042;
+  font-size: 1rem;
+  text-align: justify;
+  max-width: 419px;
+}
+
+.contacts {
+  background-color: #f7f5f5;
+}
+.contacts__title {
+  margin-bottom: 20px;
+}
+.contacts__title span {
+  color: #e7811f;
+}
+.contacts__subtitle {
+  display: block;
+  text-align: center;
+  margin-bottom: 40px;
+}
+.contacts__form {
+  text-align: center;
+  margin-bottom: 60px;
+}
+.contacts__form input {
+  margin-right: 15px;
+  padding: 7px;
+  height: 42px;
+  width: 280px;
+}
+.contacts-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+}
+.contacts-info-item {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  margin-bottom: 40px;
+}
+.contacts-info-item__img {
+  margin-right: 50px;
+}
+.contacts-info__text h3 {
+  color: #0085b2;
+  font-size: 1.75rem;
+  margin-bottom: 10px;
+}
+.contacts-info__text h3:nth-child(even) {
+  color: #e7811f;
+}
+.contacts-person {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.contacts-person__img {
+  margin-right: 30px;
+  border: 10px solid #ffffff;
+  border-radius: 110%;
+  -webkit-box-shadow: 5px 5px 11px 4px rgba(0, 0, 0, 0.1);
+          box-shadow: 5px 5px 11px 4px rgba(0, 0, 0, 0.1);
+}
+.contacts-text__title {
+  color: #0085b2;
+  font-size: 1.75rem;
+}
+.contacts-text__subtitle {
+  display: block;
+  font-size: 0.875rem;
+  color: #414042;
+  margin-top: 7px;
+  margin-bottom: 20px;
+}
+.contacts-text__phone {
+  font-size: 1.875rem;
+  color: #e7811f;
+  display: block;
+  font-weight: 500;
+}
+
+@media (max-width: 992px) {
+  .contacts-block {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+}
+@media (max-width: 768px) {
+  .contacts-person {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .contacts-person__img {
+    margin-bottom: 30px;
+  }
+  .contacts__form input {
+    margin-bottom: 15px;
+  }
+}
+@media (max-width: 576px) {
+  .contacts__form input {
+    width: auto;
+    margin-bottom: 15px;
+  }
+}
+.footer {
+  padding: 30px 0;
+  background-color: #ffffff;
+}
+.footer-block {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+.footer-text__office span {
+  font-weight: 700;
+  color: #0085b2;
+}
+.footer-text__phone {
+  color: #e7811f;
+  font-weight: 500;
+  display: block;
+  margin-top: 7px;
+}
+
+@media (max-width: 576px) {
+  .footer-block {
+    -webkit-box-pack: center;
+        -ms-flex-pack: center;
+            justify-content: center;
+  }
+  .footer-text {
+    margin-top: 20px;
+    text-align: center;
+  }
+}
+.menu-btn {
+  display: block;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  background-color: #ffffff;
+  -webkit-box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+          box-shadow: 0 0 5px rgba(0, 0, 0, 0.5);
+  position: fixed;
+  top: 10px;
+  left: 10px;
+  display: none;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+}
+.menu-btn span {
+  display: block;
+  width: 30px;
+  height: 2px;
+  background-color: black;
+}
+.menu-btn span::after {
+  content: "";
+  display: block;
+  width: 30px;
+  height: 2px;
+  background-color: black;
+  -webkit-transform: translateY(4px);
+          transform: translateY(4px);
+}
+.menu-btn span::before {
+  content: "";
+  display: block;
+  width: 30px;
+  height: 2px;
+  background-color: black;
+  -webkit-transform: translateY(-6px);
+          transform: translateY(-6px);
+}
+
+@media (max-width: 1200px) {
+  .menu-btn {
+    display: -webkit-box;
+    display: -ms-flexbox;
+    display: flex;
   }
 }
