--- a/src/sass/blocks/question.sass
+++ b/src/sass/blocks/question.sass
@@ -2,6 +2,7 @@
     padding: 23px 0
     background: url("../img/question/question-bg.jpg") left center no-repeat
     background-size: 40%
+    box-shadow: 5px 5px 11px 4px rgba(0, 0, 0, 0.1)
     &__title
         text-align: left
         font-size: 1.75rem
