--- a/src/sass/style.sass
+++ b/src/sass/style.sass
@@ -10,3 +10,15 @@
 @import './blocks/features'
 // Подключение стилей для секции question
 @import './blocks/question'
+// Подключение стилей для секции rate
+@import './blocks/rate'
+// Подключение стилей для секции gallery
+@import './blocks/gallery'
+// Подключение стилей для секции location
+@import './blocks/location'
+// Подключение стилей для секции contacts
+@import './blocks/contacts'
+// Подключение стилей для секции footer
+@import './blocks/footer'
+// Подключение стилей для кнопки menu-btn
+@import './blocks/menu-btn'
