--- a/src/sass/blocks/navbar.sass
+++ b/src/sass/blocks/navbar.sass
@@ -14,6 +14,9 @@
                 font-weight: 300
                 font-size: 1rem
                 text-decoration: none
+                transition: all 0.3s
+                &:hover
+                    color: $blue-color
             &:last-child
                 margin-right: 0
     &__contact
@@ -29,3 +32,15 @@
             margin-right: 10px
         span
             color: $main-color
+@media (max-width: 1200px)
+    .navbar
+        &-block
+            justify-content: flex-end
+        &-list
+            display: none
+@media (max-width: 576px)
+    .navbar
+        &__button
+            padding: 12px 12px
+        &-phone
+            margin-right: 7px
